--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -3,14 +3,13 @@
    
 
   
-   <form action="/auth" method="POST">
+   <form action="/api/users/auth" method="POST">
       <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-      </div>
+        <label for="UserName-signin" class="form-label">User Name</label>
+        <input type="userName" class="form-control" id="UserName" aria-describedby="UserName Input">
+ 
       <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
+        <label for="password-signin" class="form-label">Password</label>
         <input type="password" class="form-control" id="exampleInputPassword1">
       </div>
       <button type="submit" class="btn btn-primary">Login</button>
@@ -20,3 +19,5 @@
       <button type="submit" class="btn btn-secondary">Sign Up Now</button>
     </form>
 </div>
+
+<script src="/js/login.js"></script>
