--- a/views/newuser.handlebars
+++ b/views/newuser.handlebars
@@ -2,16 +2,14 @@
   <div class="card border-0 rounded-3 p-4">
     
     <form action="/signup" method="POST">
-      <label for="username">Username:</label>
+      <label for="username-signup">Username:</label>
       <input type="text" id="username" name="username" required>
 
-      <label for="password">Password:</label>
+      <label for="password-signup">Password:</label>
       <input type="password" id="password" name="password" required>
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-
-      <input type="submit" value="Sign Up">
+       <input type="submit" value="Sign Up">
     </form>
   </div>
 </div>
+<script src="./js/newuser.js"></script>
